--- a/style.css
+++ b/style.css
@@ -34,3 +34,8 @@ i{
     text-align: center;
     margin-bottom: 20px;
 }
+.top_img img{
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 65%;
+}
