--- a/style.css
+++ b/style.css
@@ -39,3 +39,10 @@ i{
     border-radius: 50%;
     margin-left: 65%;
 }
+.food_title{
+    margin-top: 400px;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
