--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ i{
     text-align: center;
     margin-bottom: 20px;
 }
+.title h2{
+    font-weight: bold;
+}
 .top_img img{
     width: 40px;
     border-radius: 50%;
