--- a/style.css
+++ b/style.css
@@ -74,9 +74,9 @@ i{
     display: flex;
     justify-content: space-between;
 }
-.food_info .text{
+/* .food_info .text{
     margin-right: 100px;
-}
+} */
 .food_info div img{
     width: 50px;
     border-radius: 100%;
@@ -85,11 +85,14 @@ i{
     display: flex;
 }
 .food_info .img_container img{
-    margin: 50px;
+    margin: 0 50px;
 }
 .food_info .img_container .img5{
-    margin-left: 350px;
+    margin-top: 40px;
+    margin-left: 250px;
+    margin-right: 100px;
 }
 .food_info .img_container .img4{
     margin-left: 100px;
+    margin-top: 40px;
 }
