--- a/style.css
+++ b/style.css
@@ -74,25 +74,31 @@ i{
     display: flex;
     justify-content: space-between;
 }
-/* .food_info .text{
+.food_info .text{
     margin-right: 100px;
-} */
+}
 .food_info div img{
+    height: 50px;
     width: 50px;
     border-radius: 100%;
 }
 .food_info .img_container{
     display: flex;
 }
-.food_info .img_container img{
-    margin: 0 50px;
-}
+
 .food_info .img_container .img5{
+    margin-right: 115px;
     margin-top: 40px;
-    margin-left: 250px;
-    margin-right: 100px;
 }
 .food_info .img_container .img4{
     margin-left: 100px;
     margin-top: 40px;
+    margin-right: 80px;
+}
+.food_info .img_container .img6{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    margin-right: 80px;
+    margin-top: 50px;
 }
