--- a/style.css
+++ b/style.css
@@ -102,3 +102,14 @@ i{
     margin-right: 80px;
     margin-top: 50px;
 }
+.btn{
+    width: 120px;
+    height: 40px;
+    margin-left: 128px;
+    border-radius: 30px;
+    background-color: #6CB840;
+    border: none;
+    outline: 0;
+    color: white;
+    font-weight: 700;
+}
