--- a/style.css
+++ b/style.css
@@ -32,80 +32,52 @@ i{
 }
 .title{
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .title h2{
     font-weight: bold;
 }
 .top_img img{
-    width: 50px;
-    border-radius: 50%;
     margin-left: 65%;
+    width: 60px;
 }
 .food_title{
-    margin-top: 400px;
-    width: 80%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
+    float: left;
+    margin-left: 128px;
+    width: 400px;
 }
-.img2{
-    width: 50px;
-    border-radius: 50%;
-    margin-left: 22%;
+.img_container1{
+    float: right;
 }
-.img3{
-    width: 50px;
-    border-radius: 50%;
+.img_container1 img:nth-child(1){
     margin-right: 150px;
+    width: 60px;
 }
-.food_title h1{
-    font-weight: bold;
+.img_container1 img:nth-child(2){
+    margin-right: 280px;
+    width: 60px;
 }
-.street{
-    color: #6CB840;
-}
-.food{
-    color: #E8AC3A;
-}
-.food_info{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-}
-.food_info .text{
-    margin-right: 100px;
-}
-.food_info div img{
-    height: 50px;
-    width: 50px;
-    border-radius: 100%;
-}
-.food_info .img_container{
+.img_container2{
+    float: right;
     display: flex;
 }
-
-.food_info .img_container .img5{
-    margin-right: 115px;
-    margin-top: 40px;
+.img_container2 img:nth-child(3){
+    margin-right: 220px;
+    width: 60px;
+    height: 60px;
 }
-.food_info .img_container .img4{
-    margin-left: 100px;
-    margin-top: 40px;
-    margin-right: 80px;
+.img_container2 img:nth-child(2){
+    margin-right: 60px;
 }
-.food_info .img_container .img6{
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
-    margin-right: 80px;
-    margin-top: 50px;
+.img_container2 img:nth-child(1){
+    margin-right: 50px;
+    width: 80px;
+    height: 80px;
 }
 .btn{
     width: 120px;
+    margin-top: 20px;
     height: 40px;
-    margin-left: 128px;
     border-radius: 30px;
     background-color: #6CB840;
     border: none;
@@ -115,15 +87,13 @@ i{
 }
 .circle{
     position: absolute;
-    width: 80%;
-    height: 60%;
-    bottom: 50%;
-    border-bottom-right-radius: 10%;
-    border-bottom-left-radius: 550%;
+    width: 100%;
+    height: 70%;
     right: 0;
     top: 0;
-    background: #B8E79C;
-    clip-path:  circle(850px  at  right);
-    margin-bottom: 100px;
+    left: 0;
+    background-color: #B8E79C;
+    -webkit-clip-path: circle(10.0% at 50%);
+    clip-path: circle(38.0% at 75% 0%);
     z-index: -1;
 }
