--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-body{
-    background-color: #E5E5E5;
     font-family: 'Poppins', sans-serif;
+}
+section{
+    background-color: #E5E5E5;
+    height: 80vh;
 }
 nav{
     margin-top: 20px;
@@ -96,4 +97,14 @@ i{
     -webkit-clip-path: circle(10.0% at 50%);
     clip-path: circle(38.0% at 75% 0%);
     z-index: -1;
+}
+.eat_section img{
+    width: 400px;
+}
+.eat_section{
+    width: 80%;
+    margin: auto;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
 }
