--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
-section{
+body{
     background-color: #E5E5E5;
-    height: 80vh;
 }
 nav{
     margin-top: 20px;
@@ -47,6 +46,12 @@ i{
     margin-left: 128px;
     width: 400px;
 }
+.street{
+color: #6FB944;
+}
+.food{
+ color: #EAAC3A;
+}
 .img_container1{
     float: right;
 }
@@ -85,6 +90,7 @@ i{
     outline: 0;
     color: white;
     font-weight: 700;
+    margin-bottom: 20px;
 }
 .circle{
     position: absolute;
@@ -100,11 +106,19 @@ i{
 }
 .eat_section img{
     width: 400px;
+    margin: 30px;
 }
 .eat_section{
-    width: 80%;
+    width: 100%;
     margin: auto;
     background-color: #FFFFFF;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.eat{
+    color: #FFD985;
+}
+.eat_section div{
+    width: 40%;
 }
