--- a/style.css
+++ b/style.css
@@ -127,16 +127,31 @@ color: #6FB944;
     margin-top: 20px;
     margin-bottom: 10px;
 }
-.menu_section{
+.menu_container{
+    background-color: #FFFFFF;
+}
+.menu_section1{
+    background-color: #EAF3E4;
     width: 80%;
     margin: auto;
     display: flex;
     align-items: center;
-    height: 20vh;
+    height: 30vh;
+    padding: 50px;
 }
 .menu_item{
     background-color: #FFFFFF;
-    margin: 20px;
-    border-bottom-right-radius: 20px;
+    margin: 40px;
+    height: 120px;
+    border-bottom-right-radius: 30px;
     position: relative;
+}
+.menu_item p{
+    text-align: right;
+    padding: 0px 15px;
+}
+.menu_item img{
+    width: 150px;
+    position: absolute;
+    left: -80px;
 }
