--- a/style.css
+++ b/style.css
@@ -155,3 +155,34 @@ color: #6FB944;
     position: absolute;
     left: -80px;
 }
+.deals_container{
+    background-color: #C9ECB5;
+    padding: 40px;
+    height: 70vh;
+}
+.deals_container h2{
+    text-align: center;
+}
+.first{
+    width: 50%;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.second{
+    position: absolute;
+    width: 60%;
+    left: 35px;
+    top: 180px;
+}
+.deals_sub_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 80%;
+    margin: auto;
+}
+.deals_info{
+    width: 40%;
+    float: right;
+}
