--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ color: #6FB944;
     position: relative;
     top: 0;
     left: 0;
+    margin-bottom: 300px;
 }
 .second{
     position: absolute;
@@ -185,7 +186,35 @@ color: #6FB944;
 .deals_info{
     width: 40%;
     float: right;
+    margin-bottom: 500px;
 }
 .hot{
     color: #81C35A;
+}
+.contact_container{
+    background-color: #FFF5DD;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 30%;
+    padding-right: 30%;
+}
+.contact_container h2{
+    margin-bottom: 20px;
+}
+.contact_container p{
+    margin-bottom: 20px;
+    width: 70%;
+}
+.contact_container input{
+    width: 450px;
+    height: 50px;
+    border-radius: 20px;
+    border: none;
+    outline: 0;
+}
+.contact_container input:placeholder-shown{
+    font-weight: 700;
 }
