--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body{
     background-color: #E5E5E5;
 }
+section{
+    height: 100vh;
+}
 nav{
     margin-top: 20px;
 }
@@ -39,7 +42,9 @@ i{
 }
 .top_img img{
     margin-left: 65%;
-    width: 60px;
+    margin-top: 50px;
+    width: 80px;
+    border-bottom: 2px dotted #6CB840;
 }
 .food_title{
     float: left;
@@ -57,28 +62,34 @@ color: #6FB944;
 }
 .img_container1 img:nth-child(1){
     margin-right: 150px;
-    width: 60px;
+    width: 80px;
 }
 .img_container1 img:nth-child(2){
-    margin-right: 280px;
-    width: 60px;
+    margin-right: 260px;
+    margin-top: 25px;
+    width: 80px;
 }
 .img_container2{
     float: right;
-    display: flex;
+    /* display: flex; */
 }
 .img_container2 img:nth-child(3){
-    margin-right: 220px;
+    margin-right: 180px;
     width: 60px;
     height: 60px;
+    margin-bottom: 100px;
 }
 .img_container2 img:nth-child(2){
-    margin-right: 60px;
+    margin-right: 50px;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 40px;
 }
 .img_container2 img:nth-child(1){
     margin-right: 50px;
     width: 80px;
     height: 80px;
+    margin-bottom: 150px;
 }
 .btn{
     width: 120px;
@@ -95,13 +106,11 @@ color: #6FB944;
 .circle{
     position: absolute;
     width: 100%;
-    height: 70%;
-    right: 0;
+    height: 80%;
     top: 0;
     left: 0;
     background-color: #B8E79C;
-    -webkit-clip-path: circle(10.0% at 50%);
-    clip-path: circle(38.0% at 75% 0%);
+    clip-path: circle(500px at 950px 0px);
     z-index: -1;
 }
 .eat_section img{
