--- a/style.css
+++ b/style.css
@@ -42,9 +42,8 @@ i{
 }
 .top_img img{
     margin-left: 65%;
-    margin-top: 50px;
+    margin-top: 10px;
     width: 80px;
-    border-bottom: 2px dotted #6CB840;
 }
 .food_title{
     float: left;
@@ -77,7 +76,7 @@ color: #6FB944;
     margin-right: 180px;
     width: 60px;
     height: 60px;
-    margin-bottom: 100px;
+    margin-bottom: 120px;
 }
 .img_container2 img:nth-child(2){
     margin-right: 50px;
@@ -107,7 +106,7 @@ color: #6FB944;
     position: absolute;
     width: 100%;
     height: 80%;
-    top: 0;
+    top: -50px;
     left: 0;
     background-color: #B8E79C;
     clip-path: circle(500px at 950px 0px);
@@ -133,11 +132,11 @@ color: #6FB944;
 }
 .menu{
     text-align: center;
-    margin-top: 20px;
     margin-bottom: 10px;
 }
 .menu_container{
     background-color: #EAF3E4;
+    padding-top: 20px;
 }
 .menu_section1{
     display: flex;
@@ -256,5 +255,5 @@ color: #6FB944;
 }
 .footer_container .foot1{
     width: 12%;
-    border-right: 2px dotted #81C35A;
+    border-right: 2px dashed #81C35A;
 }
