--- a/style.css
+++ b/style.css
@@ -11,6 +11,51 @@ body{
 section{
     height: 100vh;
 }
+
+/* Circle */
+.dotted{
+    position: relative;
+    border: 2px dashed #6CB840 ;
+    border-radius: 50%;
+    margin-top: 240px;
+    margin-left: 655px;
+    width: 500px;
+    height: 500px;
+}
+
+
+
+.dotted > img:first-child{
+    transform: rotate(0deg) translateY(-30px);
+    margin-left: 30px;
+}
+
+.dotted > img:nth-child(2) {
+    transform: rotate(45deg) translateY(-115px);
+}
+.dotted > img:nth-child(3){
+    transform: rotate(90deg) translateY(-105px);
+}
+
+.dotted > img:nth-child(4){
+    transform: rotate(-45deg) translateY(-60px);
+}
+
+.dotted > img:nth-child(5){
+    transform: rotate(-90deg) translateY(50px);
+    margin-left: 240px;
+    margin-bottom: 30px;
+}
+
+.top_img{
+    margin-top: 280px;
+    margin-left: 65%;
+}
+
+.top_img> img{
+    width: 150px;
+}
+
 nav{
     margin-top: 20px;
 }
@@ -40,11 +85,7 @@ i{
 .title h2{
     font-weight: bold;
 }
-.top_img img{
-    margin-left: 65%;
-    margin-top: 10px;
-    width: 80px;
-}
+
 .food_title{
     float: left;
     margin-left: 128px;
